--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@iconify/json": "^2.1.44",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
+    "@types/eslint": "^8.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "unplugin-icons": "^0.14.3",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-eslint": "^1.6.0"
   }
 }
